feat(capstone): add ASML 2020+ real-data end-to-end notebook with integrity checks, validation pipeline, and report

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ data/processed/*
 !results/tables/.gitkeep
 !results/logs/.gitkeep
 !results/reports/.gitkeep
+!results/reports/*.md
 
 # Notebook artifacts
 notebooks/.ipynb_checkpoints/
